--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Tindog</title>
+
+
+
+  <!-- CSS Stylesheets -->
+
   <link rel="stylesheet" href="css/styles.css">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu&display=swap"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="https://kit.fontawesome.com/3fc1707892.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -13,19 +32,52 @@
 
     <!-- Nav Bar -->
 
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">tindog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Download</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
 
 
     <!-- Title -->
+    <div clss="container-fluid">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="main">
+            <h1>Meet new and interesting dogs nearby.</h1>
+            <button type="button" class="btn btn-dark btn-lg"><i class="fa-brands fa-apple"></i>Download</button>
+            <button type="button" class="btn btn-outline-light btn-lg"><i
+                class="fa-brands fa-google-play"></i>Download</button>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div>
+            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
+
+
 
   </section>
 
@@ -33,16 +85,25 @@
   <!-- Features -->
 
   <section id="features">
-
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
-
+    <div class="container text-center">
+      <div class="row" id="main1">
+        <div class="col-lg-4">
+          <i class="fa-solid fa-circle-check fa-4x icon"  ></i>
+          <h3>Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="col-lg-4">
+          <i class="fa-solid fa-bullseye fa-4x icon" ></i>
+          <h3>Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="col-lg-4">
+          <i class="fa-solid fa-heart fa-4x icon"></i>
+          <h3>Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
 
@@ -51,7 +112,7 @@
   <section id="testimonials">
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
+    <img  class="img"src="images/dog-img.jpg" alt="dog-profile" width="10%">
     <em>Pebbles, New York</em>
 
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -64,10 +125,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="pl"src="images/techcrunch.png" alt="tc-logo">
+    <img class="pl"src="images/tnw.png" alt="tnw-logo">
+    <img class="pl"src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="pl"src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -126,6 +187,11 @@
 
   </footer>
 
+
+  <!-- Bootstrap Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 
 </body>
 
